pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api
spec:
  containers:
    - name: api
      image: docker.io/lsamaniego/api:v0.1.0
      ports:
        - containerPort: 80
