ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
 name: api
spec:
 rules:
   - http:
       paths:
         - path: /
           backend:
             serviceName: api
             servicePort: 9090
